<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ColorPickerFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/color_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/menuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/topRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuTitle">

            <View
                android:id="@+id/transparentBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/transparent_circle"
                android:contentDescription="@string/red" />

            <View
                android:id="@+id/redBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/color_circle"
                android:backgroundTint="@color/COLOR_RED"
                android:contentDescription="@string/red" />

            <View
                android:id="@+id/blueBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/color_circle"
                android:backgroundTint="@color/COLOR_BLUE"
                android:contentDescription="@string/blue" />

            <View
                android:id="@+id/orangeBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_circle"
                android:backgroundTint="@color/COLOR_ORANGE"
                android:contentDescription="@string/orange" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/topRow"
            app:layout_constraintTop_toBottomOf="@+id/topRow">

            <View
                android:id="@+id/violetBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/color_circle"
                android:backgroundTint="@color/COLOR_VIOLET"
                android:contentDescription="@string/violet" />

            <View
                android:id="@+id/greenBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/color_circle"
                android:backgroundTint="@color/COLOR_GREEN"
                android:contentDescription="@string/green" />

            <View
                android:id="@+id/brownBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/color_circle"
                android:backgroundTint="@color/COLOR_BROWN"
                android:contentDescription="@string/brown" />

            <View
                android:id="@+id/darkGreyBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_circle"
                android:backgroundTint="@color/COLOR_DARK_GREY"
                android:contentDescription="@string/darkGrey" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>