<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".WritingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TopContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="start"
            android:contentDescription="@string/colorSelector"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/pinBtn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="start"
            android:contentDescription="@string/moreOptions"
            android:src="@drawable/ic_outline_push_pin_24"
            app:layout_constraintBottom_toBottomOf="@+id/backBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:autofillHints=""
        android:background="@null"
        android:hint="@string/title"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopContainer" />

    <EditText
        android:id="@+id/noteMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_11sdp"
        android:layout_marginBottom="@dimen/_11sdp"
        android:autoLink="web"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/Note"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/bottomContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/colorSelector"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="start"
            android:contentDescription="@string/colorSelector"
            android:src="@drawable/ic_color_lens"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateEdited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/datePlaceholder"
            app:layout_constraintBottom_toBottomOf="@+id/colorSelector"
            app:layout_constraintEnd_toStartOf="@+id/moreOptions"
            app:layout_constraintStart_toEndOf="@id/colorSelector"
            app:layout_constraintTop_toTopOf="@+id/colorSelector" />


        <ImageView
            android:id="@+id/moreOptions"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="start"
            android:contentDescription="@string/moreOptions"
            android:src="@drawable/ic_more_vert"
            app:layout_constraintBottom_toBottomOf="@+id/colorSelector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/colorSelector" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>